<resources>
    <string name="app_name">Football League</string>
    <string name="text_league_details">League Details</string>
    <string name="text_description">Description :</string>
    <string name="text_see_match">See Match</string>
    <string name="text_id">ID :</string>
    <string name="text_name">Name :</string>
    <string name="text_sport">Sport :</string>
    <string name="text_formed_year">Formed Year :</string>
    <string name="text_date_first_event">First Event :</string>
    <string name="text_gender">Gender :</string>
    <string name="text_country">Country :</string>
    <string name="text_website">Website :</string>
    <string name="text_facebook">Facebook :</string>
    <string name="text_twitter">Twitter :</string>
    <string name="text_last_match">Last Match</string>
    <string name="text_next_match">Next Match</string>
    <string name="text_youtube">Youtube :</string>
    <string name="text_search">Search</string>
    <string name="text_formation">Formation</string>
    <string name="text_shot">Shot</string>
    <string name="text_red_card">Red Card</string>
    <string name="text_yellow_card">Yellow Card</string>
    <string name="text_team_id">Team ID</string>
    <string name="text_goals">Goals</string>
    <string name="text_team_name">Team Name</string>
    <string name="text_score">Score</string>
    <string name="text_search_hint">Search…</string>
    <string name="text_vs">VS</string>
    <string name="text_soccer">Soccer</string>
    <string name="text_leagues">Leagues</string>
    <string name="text_details">Details</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_added_to_favorite">Added to favorite</string>
    <string name="text_remove_to_favorite">Removed from favorite</string>
    <string name="text_notification">NOTIFICATION</string>
    <string name="text_you_havent_added_a_favorite_list_yet">You haven\'t added a favorite list yet.</string>
    <string name="text_okay">OKAY</string>
    <string name="text_action_search">action_Search</string>
    <string name="text_season">Season :</string>
    <string name="text_earch_not_found_please_try_another_keyword">Search not found, please try another keyword.</string>
    <string name="text_see_table">SEE TABLE</string>
    <string name="text_see_team">SEE TEAM</string>
    <string name="text_team">Team</string>
    <string name="text_played">Played</string>
    <string name="text_win">Win</string>
    <string name="text_draw">Draw</string>
    <string name="text_loss">Loss</string>
    <string name="text_goal">Goal</string>
    <string name="text_standing_table">Standing Table</string>
    <string name="text_teams">Teams</string>
    <string name="text_team_data_not_found">Team Data Not Found</string>
    <string name="text_total">Total</string>
    <string name="text_league">League :</string>
    <string name="text_stadium">Stadium :</string>
    <string name="text_match">Match</string>
    <string name="text_select_search_type">Select Search Type</string>
    <string name="text_close">Close</string>
    <string name="text_favorite_teams">Favorite Teams</string>
    <string name="text_favorite_matches">Favorite Matches</string>
    <string-array name="data_id_league">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>
    <string-array name="data_title_league">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
</resources>